Make scroll bar always visible to prevent layout shifting

--- a/src/views/options/components/OptionsApp.pcss
+++ b/src/views/options/components/OptionsApp.pcss
@@ -8,7 +8,7 @@
 }
 
 body {
-    @apply text-skin-text bg-skin-bg;
+    @apply text-skin-text bg-skin-bg overflow-y-scroll;
 }
 
 a {
